@@ -459,6 +459,7 @@ typedef struct _PH_MODULE_ITEM
     PVOID BaseAddress;
     ULONG Size;
     ULONG Flags;
+    ULONG Type;
     PPH_STRING Name;
     PPH_STRING FileName;
     PH_IMAGE_VERSION_INFO VersionInfo;
